public/assets/css/main.css
/* LAYOUT */
.wrapper {
    margin: 0 auto;
    max-width: 1148px;
    position: relative;
}

.content {
    margin-top: 30px;
    margin-bottom: 80px;
}
.content .wrapper {
    background-color: #FFF;
}
.content h1 {
    margin: 20px;
}

.content h2 {
    margin: 0 20px;
    padding: 10px 0;
}
.content-body {
    border: 1px solid #ccc;
}

.footer {
    background-color: #FFF;
}

/* HEADER */
    .header {
        background-color: #fff;
    }
    .logo {
        float: left;
        background: url(../img/strava-logo.svg) no-repeat;
        background-size: cover;
        height: 24px;
        width: 114px;
        margin: 12px 20px 0 0;
    }

    .navbar {
        /* Used to force navbar below the floats around it */
        min-width: 501px;
    }
    .navbar a {
        padding: 15px;
    }

    .navbar a:hover,
    .navbar .selected a:hover,
    .navbar a:focus,
    .navbar a:active {
        color: #FC4C02;
    }

    .navbar .selected a {
        color: #333;
        font-weight: 500;
        border-bottom: 2px solid #FC4C02;
        border-top: none;
    }

    .usertools {
        float: right;
        text-align: right;
        margin-top: 8px;

    }
    .usertools li {
        padding-left: 10px;
    }

    .profile {
        margin-right: 15px;
    }
    .profile .avatar {
        height: 35px;
        width: 35px;
    }

/* CONTENT */

.cat-table {
    width: 100%;
    margin-bottom: 30px;
    margin-top: 5px;
}
.cat-table .cat-table-latest {
    width: 25%;
}
.cat-filters {
    margin-bottom: 20px;
    padding: 15px 20px;
    background: #F5F5F5;
    border-top: 1px solid #E6E6E6;
    border-bottom: 1px solid #D7D7D7;
}

.hero-heading {
    height: 163px;
    margin-top: 17px;
    text-align: center;
}

.hero-heading h1 {
    display: inline-block;
    *display: inline;
    zoom: 1;
    font-weight: 400;
    margin: 0 0 5px 0;
}

.hero-heading p {
    margin: 0 auto;
    width: 450px;
    font-weight: 200;
}
.hero-heading .heading-icon {
    display: block;
    width: 49px;
    height: 48px;
    margin: 0 auto;
    background: url(../img/strava-sprite.png) no-repeat center top;
}
.heading-icon.forum {
    background-position: -331px 0px;
}

.item-count {
    width: 100px;
    text-align: center;
}

.breadcrumb {
    margin: 20px 20px 10px 20px;
}

.thread-content,
.thread-aside {
    box-sizing: border-box;
    float: left;
}

.thread-content {
    width: 70%;
    border-right: 1px solid #E5E5E5;
    margin-bottom: 20px;
}
.thread-aside {
    width: 30%;
    padding: 0 20px;
    *margin-left: -1px;
}
.thread-aside h2 {
    margin: 0;
}
.thread-title h1 {
    margin: 0;
    clear: right;
}
.thread-title {
    margin: 10px 20px 10px 20px;
}

.thread-controls {
    margin-top: 5px;
}

.comment-cta {
    float: right;
}

.thread-list {
    margin: 0 20px;
}

.post:first-child {
    border-top: 1px solid #F5F5F5;
}
.post {
    border-bottom: 1px solid #E5E5E5;
    padding: 20px 0px 20px 70px;
}
.post-header .post-avatar {
    float: left;
    margin-left: -70px;
}

.post-header .post-date {
    display: block;
}
.post-header .post-number,
.post-controls {
    float: right;
}

.post-content {
    margin-bottom: 20px;
}

.post-content .full-width {
    width: 100%;
}
.post-content blockquote {
    position: relative;
    margin: 0 0 10px 0;
    padding: 15px 20px 15px 40px;
    background: #F5F5F5;
    quotes: "\201C""\201D""\2018""\2019";
    border-left: 4px solid #CCC;
}

.post-content blockquote:before,
.post-content blockquote:after {
    font-size: 5em;
    font-weight: bold;
    color: #CCC;
    position: absolute;
    top: 0;
    line-height: 1;
}
.post-content blockquote:before {
    left: 7px;
    content: open-quote;
}
.post-content blockquote:after {
    right: 7px;
    content: close-quote;
}

.thread-comment {
    margin: 20px;
}
.thread-comment h2 {
    margin: 0;
    padding-top: 0;
}
.textarea-wrapper {
    /* margin-left = avatar width + 10px margin */
    margin-left: 72px;
    margin-bottom: 10px;
}
.thread-comment textarea {
    width: 100%;
    height: 112px;
}

.comment-avatar {
    float: left;
}

.comment-submit {
    float: right;
}

.kudo {
    margin-left: -5px;
}
.kudo-cta {
    display: inline-block;
    *display: inline;
    zoom: 1;
    background-image: url(http://d3nn82uaxijpm6.cloudfront.net/assets/sprites/sprites-application-05b3298bea322fe929dadee0fb45a883.png);
    height: 13px;
    width: 16px;
    background-position: -229px 0;
}

/* FOOTER */
    .footer {
        background-color: #fff;
        color: #666;
        padding: 40px 0;
    }
    .footer-cols {
        float: left;
    }
    .more-info .footer-cols {
        width: 25%;
    }
    .footer-promo {
        width: 300px;
        margin-right: 50px;
    }

    .footer a:link,
    .footer a:visited {
        color: #999;
        text-decoration: none;
    }

    .footer a:hover,
    .footer a:focus,
    .footer a:active {
        color: #666;
        text-decoration: underline;
    }

    .footer-logo {
        display: block;
        background: url(../img/strava-logo.svg) no-repeat 0px -50px;
        background-size: cover;
        height: 24px;
        width: 114px;
    }

    .footer h4 {
        color: #333;
        font-weight: 400;
        margin: 0 0 20px 0;
    }
    .footer-cols li {
        margin: 10px 0;
    }

    .footer .copyright {
        margin-top: 10px;
    }
    .footer .newsletter {
        border: 1px solid #E5E5E5;
        padding: 15px 20px;
    }
    .footer .newsletter-icon {
        background-image: url(http://strava.com/assets/website/sprites/sprites-website-00ad301784b10c0c738ef43bef6b1bec.png);
        background-position: -60px 0px;
        height: 19px;
        width: 26px;
        float: left;
        margin-right: 10px;
    }
    .footer .language-picker {
        float: right;
        text-align: right;
    }
    .footer .language-picker .dropdown-icon {
        height: 7px;
    }

